build: migrate project to jdk11 and fix compatibility